error in restaurant index still

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,3 +1,24 @@
-<h1>Restaurant#show</h1>
+<p>
+
+<p>
+  <b>Name:</b>
+  <%= @restaurants.name %>
+</p>
+
+<p>
+  <b>Category:</b>
+  <%= @restaurants.category %>
+</p>
+
+<p>
+  <b>Price_range:</b>
+  <%= @restaurants.price_range %>
+  
+</p>
+
+<p>Address</b>
+	<%= @restaurants.address %>
+
+</p>
 
 
