--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,3 +1,34 @@
 <h1>Restaurants</h1>
 
+<%= form_for(@restaurants) do |f| %>
+  <% if @restaurants.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@restaurants.errors.count, "error") %> prohibited this restaurant from being saved:</h2>
 
+      <ul>
+      <% @restaurants.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+  
+
+  <div class="field">
+    <%= f.label :name %><br />
+    <%= f.text_field :name %>
+  </div>
+  <div class="field">
+    <%= f.label :category %><br />
+    <%= f.text_area :category%>
+  </div>
+  <div class="field">
+    <%= f.label :price_range%><br />
+    <%= f.number_field :price_range%>
+  </div>
+
+  <div class="actions">
+    <%= f.submit %>
+  </div>
+
+<% end %>
