--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="field">
     <%= f.label :category %><br />
-    <%= f.text_area :category%>
+    <%= f.text_field :category%>
   </div>
   <div class="field">
     <%= f.label :price_range%><br />
@@ -26,7 +26,7 @@
 
  <div class="field">
     <%= f.label :address%><br />
-    <%= f.number_field :address %>
+    <%= f.text_field :address %>
   </div>
 
 
