generate a new migration to add new attributes

--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -16,7 +16,19 @@
 
 <p>Address:</b>
 	<%= @restaurant.address %>
+	<p/>
 
+<p>Capacity:</b>
+	<%= @restaurant.capacity %>
+
+</p>
+
+<p>Opening_hour:</b>
+	<%= @restaurant.opening_hour %>
+</p>
+
+<p>Closing_hour:</b>
+	<%= @restaurant.closing_hour %>
 </p>
 
 
