--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -21,7 +21,7 @@
   </div>
   <div class="field">
     <%= f.label :price_range%><br />
-    <%= f.number_field :price_range %>
+    <%= f.text_field :price_range %>
   </div>
 
  <div class="field">
@@ -29,9 +29,22 @@
     <%= f.text_field :address %>
   </div>
 
+<div class="field">
+    <%= f.label :capacity%><br />
+    <%= f.text_field :capacity %>
+  </div>
 
+<div class="field">
+    <%= f.label :opening_hour%><br />
+    <%= f.text_field :opening_hour%>
+  </div>
 
-  <div class="actions">
+<div class="field">
+    <%= f.label :closing_hour%><br />
+    <%= f.text_field :closing_hour%>
+  </div>
+
+ <div class="actions">
     <%= f.submit %>
   </div>
 <% end %>
