--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -36,12 +36,12 @@
 
 <div class="field">
     <%= f.label :opening_hour%><br />
-    <%= f.text_field :opening_hour%>
+    <%= f.number_field :opening_hour%>
   </div>
 
 <div class="field">
     <%= f.label :closing_hour%><br />
-    <%= f.text_field :closing_hour%>
+    <%= f.number_field :closing_hour%>
   </div>
 
  <div class="actions">
