--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -11,6 +11,8 @@
     </div>
   <% end %>
 
+  <%= link_to 'Make Reservation', restaurants_reservation_path(@restaurant) %>
+
   <div class="field">
     <%= f.label :name %><br />
     <%= f.text_field :name %>
