--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,38 @@
  *= require_tree .
  *= require_self
  */
+@import url('//fonts.googleapis.com/css?family=Josefin Sans');
+
+html { background: url(//www.mozaic-beachclub.com/wp-content/uploads/179-r.jpg)
+ 	no-repeat center center fixed;
+ 	-webkit-background-size: cover;
+ 	-moz-background-size: cover;
+ 	-o-background-size: cover;
+ 	background-size: cover;}
+
+
+h1 {
+		color: white;
+		text-align: center;
+		font-family: Josefin Sans;
+		font-size: 30px;
+
+}
+
+.restaurants {
+	color: white;
+	
+	font-family: Josefin Sans;
+	font-size: 30px;
+}
+p {
+	color: white;
+	font-family:Josefin Sans;
+	font-size: 30px;
+	text-align: center;
+}
+
+a:link {text-decoration: none;
+				font-family: Josefin Sans;
+				text-align:center;
+				font-size: 20px;}
