--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -48,3 +48,10 @@ a:link {text-decoration: none;
 				font-family: Josefin Sans;
 				text-align:center;
 				font-size: 20px;}
+
+footer {width:100%;
+				height:80px;
+				position:absolute;
+				bottom:0;
+				left:0;
+				}
