--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,10 +27,17 @@ h1 {
 		color: white;
 		text-align: center;
 		font-family: Josefin Sans;
-		font-size: 30px;
+		/*font-size: 30 px;*/
 
 }
 
+
+h3 {
+		color: white;
+		text-align: center;
+		font-family: Josefin Sans;
+
+}
 .restaurants {
 	color: white;
 	
@@ -51,7 +58,17 @@ a:link {text-decoration: none;
 
 footer {width:100%;
 				height:80px;
-				position:absolute;
+				/*position:fixed;*/
 				bottom:0;
 				left:0;
 				}
+
+.reservation {font-family: Josefin Sans;
+							text-align:center;
+							font-size: 20px;
+							color: white;}
+
+.login {font-family: Josefin Sans;
+				text-align:center;
+				font-size: 20px;
+				color: white;}
