--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,13 +1,13 @@
 <h1>Listing Restaurants</h1>
 
-<%= link_to 'New Restaurant', new_restaurant_path %>
-
+<p><%= link_to 'New Restaurant', new_restaurant_path %>
+</p>
 <div id="restaurants">
   <% @restaurants.each do |restaurant| %>
     <%= link_to restaurant_path(restaurant.id) do %>
       <h2>
         <%= number_to_currency(restaurant.price_range) %>
-        <%= restaurant.name %>
+        <br/><%= restaurant.name %>
       </h2>
     <% end %>
     <p><%= restaurant.category %></p>
