--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,4 +1,5 @@
-<p>
+<p class:
+>
   <b>Name:</b>
   <%= @restaurant.name %>
 </p>
@@ -9,43 +10,47 @@
 </p>
 
 <p>
-  <b>Price_range:</b>
+  <b>Price Range:</b>
   <%= @restaurant.price_range %>
   
 </p>
-
-<p>Address:</b>
+<p>
+<b>Address:</b>
 	<%= @restaurant.address %>
-	<p/>
-
-<p>Capacity:</b>
+	</p>
+<p>
+<b>Capacity:</b>
 	<%= @restaurant.capacity %>
 
 </p>
-
-<p>Opening_hour:</b>
+<p>
+<b>Opening Hour:</b>
 	<%= @restaurant.opening_hour %>
 </p>
-
-<p>Closing_hour:</b>
+<p>
+<b>Closing Hour:</b>
 	<%= @restaurant.closing_hour %>
 </p>
 
-<h1>Reservation Request for <%= @restaurant.name %></h1>
+<h3>Reservation Request for <%= @restaurant.name %></h3>
+
+<form class="reservation">
+
 <%= form_for [@restaurant, @reservation] do |f| %>
 
 
   <%= f.label :party_size %>
   <%= f.number_field :party_size, value: 2 %>
-
+<br/>  
+<br/>
   <%= f.label :date %>
   <%= f.date_field :date %></br>
-
+<br/>
   <%= f.label :time %>
   <%= f.time_field :time %></br>
-
+<br/>
   <%= f.submit class: "btn btn-large btn-success" %>
-
+  </form>
   <% end %>
 
 
