--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -32,33 +32,22 @@
 	<%= @restaurant.closing_hour %>
 </p>
 
-<<<<<<< HEAD
-<h3>Reservation Request for <%= @restaurant.name %></h3>
-
-<form class="reservation">
-
-=======
-
-
 
 <h1>Reservation Request for <%= @restaurant.name %></h1>
->>>>>>> 8dd0ac2ae72e1c5bf03b5eabb1f74f3e64c825b3
-<%= form_for [@restaurant, @reservation] do |f| %>
 
-
+<%= form_for [@restaurant, @reservation], html: {class: 'reservation'} do |f| %>
   <%= f.label :party_size %>
   <%= f.number_field :party_size, value: 2 %>
-<br/>  
-<br/>
+  <br/>  
+  <br/>
   <%= f.label :date %>
   <%= f.date_field :date %></br>
-<br/>
+  <br/>
   <%= f.label :time %>
   <%= f.time_field :time %></br>
-<br/>
+  <br/>
   <%= f.submit class: "btn btn-large btn-success" %>
-  </form>
-  <% end %>
+<% end %>
 
   <% if current_user %>
 | <button><%= link_to "Edit", edit_restaurant_path(@restaurant) %></button> | <button><%= link_to "Delete", @restaurant, method: :delete, data: {confirm: "Are you sure you want to delete this restaurant?"} %></button>
