--- a/app/assets/stylesheets/frontpage.scss
+++ b/app/assets/stylesheets/frontpage.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the frontpage controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+// html { background: url(//c1038.r38.cf3.rackcdn.com/group1/building3994/media/Amirandes%20Restaurant%20%26%20Lagoons%20Night%20View.jpg)
+//  	no-repeat center center fixed;
+//  	-webkit-background-size: cover;
+//  	-moz-background-size: cover;
+//  	-o-background-size: cover;
+//  	background-size: cover;}
