--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -32,17 +32,16 @@
 	<%= @restaurant.closing_hour %>
 </p>
 
-<<<<<<< HEAD
+
 <h3>Reservation Request for <%= @restaurant.name %></h3>
 
 <form class="reservation">
 
-=======
+
 
 
 
 <h1>Reservation Request for <%= @restaurant.name %></h1>
->>>>>>> 8dd0ac2ae72e1c5bf03b5eabb1f74f3e64c825b3
 <%= form_for [@restaurant, @reservation] do |f| %>
 
 
@@ -59,10 +58,12 @@
   <%= f.submit class: "btn btn-large btn-success" %>
   </form>
   <% end %>
-
+  <br/>
+<div class="buttons">
   <% if current_user %>
-| <button><%= link_to "Edit", edit_restaurant_path(@restaurant) %></button> | <button><%= link_to "Delete", @restaurant, method: :delete, data: {confirm: "Are you sure you want to delete this restaurant?"} %></button>
+  <button><%= link_to "Edit", edit_restaurant_path(@restaurant) %></button> | <button><%= link_to "Delete", @restaurant, method: :delete, data: {confirm: "Are you sure you want to delete this restaurant?"} %></button>
 <% end %>
+</div>
 </p>
 
 
