fixed up main page

--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,4 +1,6 @@
-<h1>Listing Restaurants</h1>
+<h1>SEAT YOURSELF!</h1>
+
+<h2>Select a Restaurant</h2>
 
 <p><%= link_to 'New Restaurant', new_restaurant_path %>
 </p>
