--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,7 +27,7 @@ h1 {
 		color: white;
 		text-align: center;
 		font-family: Josefin Sans;
-		/*font-size: 30 px;*/
+		font-size: 50px;
 
 }
 
@@ -35,6 +35,7 @@ h2 {
 	color: white;
 	text-align: center;
 	font-family: Josefin Sans;
+	font-size: 40px;
 }
 
 h3 {
