--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -66,4 +66,4 @@
 <% end %>
 </div>
 </p>
-<p><%= link_to "Back to Restaurants", products_url %>
+<p><%= link_to "Back to Restaurants", restaurants_url %></p>
