--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -75,7 +75,30 @@ footer {width:100%;
 							color: white;}
 
 .login {font-family: Josefin Sans;
-				text-align:center;
 				font-size: 20px;
-				color: white;}
+				color: white;
+				text-align: right;
+				display:inline-block;
+				float: right;
+				padding-right: 10px;
+			}
 .buttons {text-align: center;}
+
+.title {text-align: left;
+				font-family: Josefin Sans;
+				font-size:20px;
+				color: white;
+				float: left;
+				padding-left: 10px;
+				display:inline-block;}
+
+.userinfo {background-color: rgba 0, 0, 0, 0.05;
+    color: white;
+    position: absolute;
+    top: 10px;
+    left: 0;
+    width: 100%;
+    height: 50px;
+    padding: 0;
+    margin: 0;
+    display:inline-block;}
