--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,18 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
 </head>
+<nav class="userinfo">
+<div class="title">
+<%= link_to "HOME", restaurants_url %>
+</div>
+<div class="login">
+      <% if current_user %>
+        Signed in as <%= current_user.name %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
+      <% else %>
+        <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
+      <% end %>
+    </div>
+</nav>
 <body>
 <% if flash[:notice] %>
     <script>
@@ -19,14 +31,9 @@
 <% end %>
 
 <%= yield %>
+
 <footer>
-<p class="userinfo">
-      <% if current_user %>
-        Signed in as <%= current_user.name %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
-      <% else %>
-        <%= link_to "Log in", new_session_path %> or <%= link_to "Sign up", new_user_path %>
-      <% end %>
-    </p>
+
 </footer>  
 
 </body>
