--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,10 +1,10 @@
-<%= form_for(@restaurants) do |f| %>
-  <% if @restaurants.errors.any? %>
+<%= form_for(@restaurant) do |f| %>
+  <% if @restaurant.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@restaurant.errors.count, "error") %> prohibited this product from being saved:</h2>
 
       <ul>
-      <% @restaurants.errors.full_messages.each do |msg| %>
+      <% @restaurant.errors.full_messages.each do |msg| %>
         <li><%= msg %></li>
       <% end %>
       </ul>
@@ -36,12 +36,14 @@
   </div>
 
 <div class="field">
-    <%= f.label :opening_hour%><br />
+    <%= f.label :opening_hour%> :
+    <%= @restaurant.opening_hour%><br />
     <%= f.time_field :opening_hour%>
   </div>
 
 <div class="field">
-    <%= f.label :closing_hour%><br />
+    <%= f.label :closing_hour%> :
+    <%= @restaurant.closing_hour%><br />
     <%= f.time_field :closing_hour%>
   </div>
 
