--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,15 @@
 </head>
 <nav class="userinfo">
 <div class="title">
+<% if current_user %>
+
 <%= link_to "HOME", restaurants_url %>
+<% else %>
+<%= link_to "HOME", frontpage_index_url %>
+<% end %>
 </div>
+
+
 <div class="login">
       <% if current_user %>
         Signed in as <%= current_user.name %>. <%= link_to "Log out", session_path("current"), :method => :delete %>
