--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,7 +1,9 @@
 <h1>New restaurant</h1>
 
+<form class="reservation">
+
 <%= render 'form' %>
 
-<%= link_to 'Back', restaurants_path %>
 
 
+</form>
