--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -36,14 +36,12 @@
   </div>
 
 <div class="field">
-    <%= f.label :opening_hour%> :
-    <%= @restaurant.opening_hour%><br />
+    <%= f.label :opening_hour%> <br />
     <%= f.time_field :opening_hour%>
   </div>
 
 <div class="field">
-    <%= f.label :closing_hour%> :
-    <%= @restaurant.closing_hour%><br />
+    <%= f.label :closing_hour%> <br />
     <%= f.time_field :closing_hour%>
   </div>
 
