--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,8 +1,9 @@
 
-<p><%= link_to "User Profile", user_path(current_user) %></p>
+
 
 <p class:
 >
+
   <b>Name:</b>
   <%= @restaurant.name %>
 </p>
@@ -34,6 +35,7 @@
 <b>Closing Hour:</b>
 	<%= @restaurant.closing_hour %>
 </p>
+
 
 
 <h3>Reservation Request for <%= @restaurant.name %></h3>
@@ -69,3 +71,5 @@
 <% end %>
 </div>
 </p>
+
+<%= link_to "User Profile", user_url(current_user) %>
